==> suoZhangEmbedded/stm32h7_freertos/User/bsp/src/bsp_camera.c <==
#include "bsp.h"
#define DCMI_DR_ADDRESS       	0x50050028
#define OV_REG_NUM  	116  //OV7670
#define DMA_CLOCK              RCC_AHB1Periph_DMA2
#define DMA_STREAM             DMA2_Stream7
#define DMA_CHANNEL            DMA_Channel_1
#define DMA_IRQ                DMA2_Stream7_IRQn
#define DMA_IT_TCIF            DMA_IT_TCIF7
#define DMA_IRQHandler         DMA2_Stream7_IRQHandler

static void CAM_ConfigCPU(void)
{
 	/* 安富莱STM32-V7开发板采用有源晶振提供24M时钟，因此不用PA8产生时钟 */

	/*
		将DCMI相关的GPIO设置为复用模式  - STM32-V7
			PA4/DCMI_HSYNC/DAC_OUT1		
			PA6/DCMI_PIXCLK
			PB7/DCMI_VSYNC			
			PC6/DCMI_D0/AD7606_CONVST
			PC7/DCMI_D1/USART6_RX
			PD3/DCMI_D5
			PE4/DCMI_D4/NRF24L01_IRQ
			PE5/DCMI_D6/AD7606_BUSY
			PE6/DCMI_D7/NRF905_CD			
			PG10/DCMI_D2/NRF24L01_CSN
			PG11/DCMI_D3/ETH_RMII_TX_EN
	*/
	{  	
		GPIO_InitTypeDef GPIO_InitStruct;
		
		/* Peripheral clock enable */
		__HAL_RCC_DCMI_CLK_ENABLE();
		
		__HAL_RCC_GPIOA_CLK_ENABLE();
		__HAL_RCC_GPIOB_CLK_ENABLE();
		__HAL_RCC_GPIOC_CLK_ENABLE();
		__HAL_RCC_GPIOD_CLK_ENABLE();
		__HAL_RCC_GPIOE_CLK_ENABLE();
		__HAL_RCC_GPIOG_CLK_ENABLE();
		
		GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
		GPIO_InitStruct.Alternate = GPIO_AF13_DCMI;
		
		GPIO_InitStruct.Pin = GPIO_PIN_4 | GPIO_PIN_6;
		HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);		
		
		GPIO_InitStruct.Pin = GPIO_PIN_7;
		HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

		GPIO_InitStruct.Pin = GPIO_PIN_6 | GPIO_PIN_7;
		HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);	

		GPIO_InitStruct.Pin = GPIO_PIN_3;
		HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

		GPIO_InitStruct.Pin = GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_6;
		HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);	
		
		GPIO_InitStruct.Pin = GPIO_PIN_10 | GPIO_PIN_11;
		HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);	
	}

	/* 配置 DCMIC 参数 */
	{
		/* DCMI INIT */
		hdcmi.Instance = DCMI;
		hdcmi.Init.SynchroMode = DCMI_SYNCHRO_HARDWARE;
		hdcmi.Init.PCKPolarity = DCMI_PCKPOLARITY_RISING;   
		hdcmi.Init.VSPolarity = DCMI_VSPOLARITY_HIGH;              
		hdcmi.Init.HSPolarity = DCMI_HSPOLARITY_LOW;    
		hdcmi.Init.CaptureRate = DCMI_CR_ALTERNATE_2_FRAME;
		hdcmi.Init.ExtendedDataMode = DCMI_EXTEND_DATA_8B;                  
		hdcmi.Init.JPEGMode = DCMI_JPEG_DISABLE;  
		hdcmi.Init.ByteSelectMode = DCMI_BSM_ALL;
		hdcmi.Init.ByteSelectStart = DCMI_OEBS_ODD;
		hdcmi.Init.LineSelectMode = DCMI_LSM_ALL;
		hdcmi.Init.LineSelectStart = DCMI_OELS_ODD; 
		if (HAL_DCMI_Init(&hdcmi) != HAL_OK)
		{
			Error_Handler(__FILE__, __LINE__);
		}

		/* DCMI interrupt Init */
		HAL_NVIC_SetPriority(DCMI_IRQn, 0, 0);
		HAL_NVIC_EnableIRQ(DCMI_IRQn);			
	}
}

void CAM_Start(uint32_t _uiDispMemAddr)
{	
	memset((char *)_uiDispMemAddr, 0,  2000);
	/* DCMI DMA Init */
	{
		hdma_dcmi.Instance = DMA1_Stream7;
		hdma_dcmi.Init.Request = DMA_REQUEST_DCMI;
		hdma_dcmi.Init.Direction = DMA_PERIPH_TO_MEMORY;
		hdma_dcmi.Init.PeriphInc = DMA_PINC_DISABLE;
		hdma_dcmi.Init.MemInc = DMA_MINC_ENABLE;
		hdma_dcmi.Init.PeriphDataAlignment = DMA_PDATAALIGN_WORD;
		hdma_dcmi.Init.MemDataAlignment = DMA_MDATAALIGN_WORD;
		hdma_dcmi.Init.Mode = DMA_CIRCULAR;
		hdma_dcmi.Init.Priority = DMA_PRIORITY_LOW;
		hdma_dcmi.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
		if (HAL_DMA_Init(&hdma_dcmi) != HAL_OK)
		{
			Error_Handler(__FILE__, __LINE__);
		}

		__HAL_LINKDMA(&hdcmi, DMA_Handle, hdma_dcmi);

		  /* DMA controller clock enable */
		__HAL_RCC_DMA1_CLK_ENABLE();

		/* DMA interrupt init */
		/* DMA1_Stream7_IRQn interrupt configuration */
		HAL_NVIC_SetPriority(DMA1_Stream7_IRQn, 0, 0);
		HAL_NVIC_EnableIRQ(DMA1_Stream7_IRQn);		
	}
	
	//HAL_DCMI_Start_DMA(&hdcmi, DCMI_MODE_CONTINUOUS, (uint32_t)buff, 128);
	HAL_DCMI_Start_DMA(&hdcmi, DCMI_MODE_SNAPSHOT, (uint32_t)_uiDispMemAddr, 265*320*2);	

	g_tCam.CaptureOk = 0;		/* 全局标志 */
}
